--- a/index.html
+++ b/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
     <!--title, fav and links-->
     <title>Book Haven</title>
-    <link rel="icon" type="image/x-icon" href="assets/images/bookhaven.ico">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="assets/images/bookhaven.ico" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+
+<!--SEO Tags-->
+<meta name="author" content="Othniel Otuo Twumasi" />
+<meta name="keywords" content="Library, E-Reading, Books, Online Reading" />
+<meta name="description" content="a website for e-reading called bookhaven" />
+<meta name="title" content="Book Haven" />
+
+<!--Open Graph Tags-->
+<meta property="og:title" content="Book Haven" />
+<meta property="og:image" content="#" />
+<meta property="og:url" content="#" />
+<meta property="og:description" content="a website for e-reading called bookhaven" />
+<meta property="og:type" content="website" />
+
+<!--Twitter Tags-->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Book Haven" />
+<meta name="twitter:image" content="#" />
+<meta name="twitter:description" content="a website for e-reading called bookhaven" />
+
 </html>
