--- a/index.html
+++ b/index.html
@@ -29,5 +29,23 @@
         <meta name="twitter:url" content="#">
         <meta name="twitter:image" content="#">
     </head>
-    <body></body>
+    <body>
+
+    <!--Nav Bar-->
+    <header>
+        <h1 class="logo">BookHaven</h1>
+        <ul class="main-nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Genres</a></li>
+            <li><a href="#">Best Sellers</a></li>
+            <li><a href="#">About Us</a></li>
+        </ul>
+
+        <div class="auth-nav-buttons">
+            <button class="login">Login</button>
+            <button class="signUp">Sign Up</button>
+        </div>
+    </header>
+
+    </body>
 </html>
