Successfully created text part. Image part is all that is left

--- a/index.html
+++ b/index.html
@@ -47,5 +47,35 @@
         </div>
     </header>
 
+    <!--Container to hold text and images-->
+    <div class="container">
+        <section class="textPart"><h1 class="heading">
+            Access a library of millions for only 10 cedis a month
+        </h1>
+        <p class="subHeading">For only 10 cedis a month, Book Haven provides you with unlimited access to books of every genre. Discover new stories and enjoy user-friendly features designed to enhance your reading experience.</p>
+        <div class="cta-buttons">
+            <button class="joinUs">Join Us Today</button>
+            <button class="learnMore">Learn More</button>
+        </div>
+        <section class="testimonial">
+            <article class="users chip">
+                <h1>25.7K</h1>
+                <p>Active users</p>
+            </article>
+            <hr />
+            <article class="books chip">
+                <h1>1.6M</h1>
+                <p>Books across countles genres</p>
+            </article>
+            <hr />
+            <article class="sponsor chip">
+                <h1>Gov.</h1>
+                <p>Sponsored by government</p>
+            </article>
+        </section>
+    </section>
+        <section class="imagePart"></section>
+    </div>
+
     </body>
 </html>
